@@ -1,59 +1,58 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:padding="2dp">
 
     <ImageView
         android:id="@+id/icon"
-        android:src="@drawable/generic_podcast"
-        android:layout_width="90dp"
-        android:layout_height="fill_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_margin="0dp" android:contentDescription="Podcast icon"/>
-
-    <LinearLayout
-        android:id="@+id/linearLayout1"
+        android:src="@drawable/soundwaves"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="90dp"
-        android:layout_toRightOf="@id/icon"
-        android:orientation="vertical"
-        android:padding="4dp" >
+        android:layout_height="fill_parent"
+        android:adjustViewBounds="true"
+        android:layout_alignParentLeft="true"
+        android:layout_margin="0dp"
+        android:contentDescription="Podcast icon"/>
 
-        <TextView
+    <TextView
             android:id="@+id/notification_title"
+            android:layout_toRightOf="@id/icon"
+            android:layout_marginTop="7dp"
+            android:layout_marginLeft="7dp"
+            android:layout_marginRight="53dp"
             android:text="Title"
             style="Custom Notification Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:singleLine="true"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textSize="16sp"
+            android:textColor="@color/black"
+             />
 
-        <TextView
+    <TextView
             android:id="@+id/notification_content"
+            android:layout_below="@id/notification_title"
+            android:layout_toRightOf="@id/icon"
+            android:layout_marginTop="7dp"
+            android:layout_marginLeft="7dp"
+            android:layout_marginRight="53dp"
             android:text="Content"
             style="Custom Notification Text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:singleLine="true" />
-    </LinearLayout>
+            android:singleLine="true"
+            android:textSize="16sp"
+            android:textColor="@color/grayStart"/>
 
-        <ImageView
-        android:id="@+id/next_button"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+    <ImageView
+        android:id="@+id/play_pause_button"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:adjustViewBounds="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/av_next_dark" 
-        android:layout_marginRight="15dp" />
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_play_arrow_black"
+        android:layout_marginRight="20dp" />
 
-        <ImageView
-            android:id="@+id/play_pause_button"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_alignParentTop="true"
-            android:layout_toLeftOf="@+id/next_button"
-            android:src="@drawable/av_pause_dark" 
-            android:layout_marginRight="15dp" />
     
 </RelativeLayout>
