@@ -7,6 +7,7 @@ version 0.74
 * Updated Playlist UI
 * Tweaked subscription UI
 * Tweaked UI colors
+* Started on a new and better notification
 
 version 0.72
 ------------
